# DeepRAGTuner

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  api.py  environment.yaml  environment.yml  helper.py  main.py  pyproject.toml  requirements.in  requirements.txt  run.py  setup.py  tasks.py
configs/: eval.yaml  train.yaml
configs/callbacks/: flop-count.yaml
configs/data/: mnist.yaml
configs/experiment/owt/: base.yaml  gpt2s-hf.yaml
configs/experiment/pile/: base.yaml
configs/logger/: wandb.yaml
src/: eval.py  train.py
src/callbacks/: causality_monitor.py  ema.py  flop_count.py  gpu_affinity.py  loss_scale_monitor.py  model_checkpoint.py  norm_monitor.py  params_log.py  speed_monitor.py  wandb_callbacks.py
src/datamodules/: fault_tolerant_sampler.py  imagenet.py  language_modeling_hf.py  timm_mixup.py
src/datamodules/datasets/: lm_dataset.py
src/distributed/: ddp_comm_hooks.py
src/metrics/: accuracy.py  num_tokens.py  perplexity.py
src/models/components/: baichuan.py  bert.py  bigcode.py  falcon.py  gpt.py  gpt_neox.py  gptj.py  llama.py  llm_components.py  opt.py  seq_common.py  vit.py
src/models/losses/: cross_entropy.py
src/optim/: param_grouping.py  timm_lr_scheduler.py
src/tasks/: seq.py
src/utils/: __init__.py  checkpoint.py  ddp_zero1.py  ddp_zero2.py  ema.py  flops.py  gpu_affinity.py  pylogger.py  utils.py
tests/: test_cli.py
tests/datamodules/: test_language_modeling_hf.py
